added comment in css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Site is not designed for mobile. May go back and fix after learning bootstrap */
 :root {
   --primary: rgb(28, 69, 135);
   --secondary: rgb(205, 226, 245);
